add notify and message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 ## 数据源配置
 spring.datasource.url=jdbc:mysql://localhost:3306/microcomputer?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=000000
+spring.datasource.password=yourpassword
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.http.multipart.maxFileSize=50Mb
 
 ## Mybatis 配置
 mybatis.typeAliasesPackage=com.shadowxz.domain
 mybatis.mapperLocations=classpath:mapper/*.xml
+
+
+upload.dir = c:/webappUpload
